build flags moved

--- a/src/SConscript
+++ b/src/SConscript
@@ -1,14 +1,7 @@
 Import('env')
 
 raft_o = env.StaticObject(
-        ["node.cpp", "log.cpp"],
-        CPPPATH = [],
-        CPPFLAGS = [ "-g", "-DDEBUG" ],
-        CXXFLAGS = "-std=c++11")
+        ["node.cpp", "log.cpp"])
 
-env.StaticLibrary("raft",
-        source = raft_o,
-        CPPPATH = [],
-        CPPFLAGS = [ "-g", "-DDEBUG" ],
-        CXXFLAGS = "-std=c++11")
+env.StaticLibrary("raft", source = raft_o)
 
