--- a/test/SConscript
+++ b/test/SConscript
@@ -12,6 +12,4 @@ env.Program("test",
         source = (["test_runner.cpp", "node_tests.cpp", "log_tests.cpp", "gtest-all.o"]), 
         LIBS = ["pthread", "raft"],
         LIBPATH = ["#build/raft"],
-        CPPPATH = ["#gtest/include", "#src"],
-        CPPFLAGS = [ "-g", "-DDEBUG" ],
-        CXXFLAGS = "-std=c++11")
+        CPPPATH = ["#gtest/include", "#src"])
