--- a/test/SConscript
+++ b/test/SConscript
@@ -10,6 +10,6 @@ env.StaticObject("gtest-all.o",
 
 env.Program("test", 
         source = (["test_runner.cpp", "node_tests.cpp", "log_tests.cpp", "tcp_server_tests.cpp", "gtest-all.o"] + raft_o), 
-        LIBS = ["pthread", "protobuf"],
+        LIBS = ["pthread", "protobuf", "boost_system"],
         LIBPATH = ["#build/raft"],
         CPPPATH = ["#gtest/include", "#src", "#build/raft"])
