--- a/test/SConscript
+++ b/test/SConscript
@@ -9,7 +9,13 @@ env.StaticObject("gtest-all.o",
         CXXFLAGS = "-std=c++0x")
 
 env.Program("test", 
-        source = (["test_runner.cpp", "node_tests.cpp", "log_tests.cpp", "tcp_server_tests.cpp", "gtest-all.o"] + raft_o), 
+        source = ([
+            "test_runner.cpp",
+            "node_tests.cpp",
+            "log_tests.cpp",
+            "tcp_smoke_tests.cpp",
+            "gtest-all.o"
+            ] + raft_o), 
         LIBS = ["pthread", "protobuf", "boost_system"],
         LIBPATH = ["#build/raft"],
         CPPPATH = ["#gtest/include", "#src", "#build/raft"])
