--- a/src/SConscript
+++ b/src/SConscript
@@ -13,6 +13,7 @@ raft_o.extend(env.StaticObject([
     "tcp_server.cpp",
     "tcp_connection.cpp",
     "tcp_client.cpp",
+    "rpc_util.cpp",
     "proto/raft.pb.cc"
     ]))
 
